--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <section class="py-12 md:py-24">
         <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8">
         <!-- Heading -->
-        <div class="text-center mb-12 md:mb-16 mt-8 md:mt-20">
+        <div class="text-center mb-12 md:mb-16 mt-8 md:mt-20 max-md:mt-20">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 flex flex-col md:flex-row items-center justify-center gap-2 md:gap-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-paperclip-icon lucide-paperclip text-indigo-600 md:w-6 md:h-6">
                     <path d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"/>
